[gd_scene load_steps=4 format=3 uid="uid://dficdk1ga18re"]

[ext_resource type="Script" path="res://addons/vn_engine/scenes/vn_player.gd" id="1_tq3hm"]
[ext_resource type="PackedScene" uid="uid://132td3bykm01" path="res://addons/vn_engine/scenes/pick_choice_handler.tscn" id="3_7tsex"]
[ext_resource type="PackedScene" uid="uid://6qxmijmlobbm" path="res://addons/vn_engine/scenes/dialog_handler.tscn" id="3_v0mo4"]

[node name="VNPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tq3hm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="SpeakerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Name"

[node name="DialogBox" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="DialogText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DialogBox/MarginContainer"]
clip_contents = false
layout_mode = 2
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="ChoicesScrollPanel" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="ChoicesScrollPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicesScrollPanel/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ChoicesScrollPanel/MarginContainer/ChoicesContainer"]
layout_mode = 2
text = "Test Choice"

[node name="Handlers" type="Node" parent="."]

[node name="DialogHandler" parent="Handlers" instance=ExtResource("3_v0mo4")]

[node name="PickChoiceHandler" parent="Handlers" instance=ExtResource("3_7tsex")]
